<resources>
    <string name="app_name">Covid19 Brazil</string>
    <string name="brazil">Brazil</string>
    <string name="cases">Cases</string>
    <string name="symptoms">Symptoms</string>
    <string name="care">Care</string>
    <string name="transmission">Transmission</string>
    <string name="prevention">Prevention</string>
    <string name="covid_description">COVID-19 is an infectious disease caused by severe acute respiratory syndrome coronavirus 2 (SARS-CoV-2).</string>
    <string name="symptoms_description">The symptoms of COVID-19 can range from a simple flu to severe pneumonia.</string>
    <string name="prevention_description">Knowing how to prevent COVID 19 and how it is transmitted is an important tool in combating the disease.</string>
    <string name="most_common_symptoms">Most common symptoms:</string>
    <string name="common_symptoms_list">
        <![CDATA[
            &#8226; fever<br/>
            &#8226; dry cough<br/>
            &#8226; fatigue<br/>
        ]]>
    </string>
    <string name="less_common_symptoms">Less common symptoms:</string>
    <string name="less_common_symptoms_list">
        <![CDATA[
            &#8226; loss of taste or smell<br/>
            &#8226; nasal congestion<br/>
            &#8226; conjunctivitis (also known as red eyes)<br/>
            &#8226; sore throat<br/>
            &#8226; headache<br/>
            &#8226; muscle or joint pain<br/>
            &#8226; different types of skin rash<br/>
            &#8226; nausea or vomiting<br/>
            &#8226; chills or dizziness.<br/>
        ]]>
    </string>
    <string name="severe_covid_symptoms">Symptoms of severe COVID‐19:</string>
    <string name="severe_covid_symptoms_list">
        <![CDATA[
            &#8226; shortness of breath<br/>
            &#8226; loss of appetite<br/>
            &#8226; confusion<br/>
            &#8226; persistent pain or pressure in the chest<br/>
            &#8226; high temperature (above 38 °C)<br/>
        ]]>
    </string>
    <string name="transmission_subtitle">The transmission occurs from one sick person to another or through close contact through:</string>
    <string name="transmission_list">
        <![CDATA[
            &#8226; Handshake<br/>
            &#8226; Spit droplets<br/>
            &#8226; Sneeze<br/>
            &#8226; Cough<br/>
            &#8226; Phlegm<br/>
            &#8226; Contaminated objects or surfaces, such as cell phones, tables, door handles, toys, computer keyboards, etc.<br/>
        ]]>
    </string>
    <string name="prevemtion_subtitle">The prevention recommendations for COVID-19 are as follows:</string>
    <string name="prevention_list">
        <![CDATA[
            &#8226; Wash your hands frequently up to the wrists, with soap and water, or sanitized with 70% gel alcohol.<br/>
            &#8226; When coughing or sneezing, cover your nose and mouth with a handkerchief or your arm, not your hands.<br/>
            &#8226; Avoid touching eyes, nose and mouth with unwashed hands.<br/>
            &#8226; When touching, always wash your hands as indicated.<br/>
            &#8226; Keep a minimum distance of about 2 meters from anyone coughing or sneezing.<br/>
            &#8226; Avoid hugs, kisses and handshakes. Adopt friendly behavior without physical contact, but always with a smile on your face.<br/>
            &#8226; Frequently sanitize children\'s cell phones and toys.<br/>
            &#8226; Do not share personal items, such as cutlery, towels, plates and glasses.<br/>
            &#8226; Keep environments clean and well ventilated.<br/>
            &#8226; Avoid unnecessary circulation in the streets, stadiums, theaters, shopping malls, concerts, cinemas and churches. If you can, stay home.<br/>
            &#8226; If you are sick, avoid physical contact with other people, especially the elderly and the chronically ill, and stay at home until you get better.<br/>
            &#8226; Sleep well and eat healthy.<br/>
            &#8226; Use homemade or handmade masks made of fabric when leaving your home.<br/>
        ]]>
    </string>
    <string name="useful_links">Useful links</string>
    <string name="confirmed">Confirmed</string>
    <string name="active">Active</string>
    <string name="recovered">Recovered</string>
    <string name="deaths">Deaths</string>
    <string name="states">States</string>
    <string name="ministry_of_health">Ministry of Health of Brazil</string>
    <string name="updatedAt">Updated at </string>
    <string name="updatedAtValue">Updated at %s</string>
    <string name="error">Error</string>
    <string name="atila">Atila Iamarino - Biologist</string>
    <string name="bbc">BBC Brazil</string>
    <string name="link_title_1">Learn the right way to wash your hands (Portuguese)</string>
    <string name="link_title_2">How to protect yourself from COVID-19 (Portuguese)</string>
    <string name="link_title_3">Learn how to make your cloth mask with needle and thread (Portuguese)</string>
    <string name="link_title_4">How are the symptoms of COVID-19? (Portuguese)</string>
    <string name="link_title_5">@string/ministry_of_health</string>
    <string name="link_title_6">World Health Organization - COVID-19</string>
    <string name="link_title_7">What is the Future of Coronavirus and COVID-19?  (Portuguese)</string>
    <string name="link_title_8">Covid-19: what is the risk of contagion that each activity offers? (Portuguese)</string>
    <string name="link_title_9">Covid-19: the care that the patient should take even after \'healing\' (Portuguese)</string>
    <string name="risk_1">1 Low Risk</string>
    <string name="risk_2">2 Low Risk</string>
    <string name="risk_3">3 Moderate-Low</string>
    <string name="risk_4">4 Moderate-Low</string>
    <string name="risk_5">5 Moderate Risk</string>
    <string name="risk_6">6 Moderate Risk</string>
    <string name="risk_7">7 Moderate-High</string>
    <string name="risk_8">8 High Risk</string>
    <string name="risk_9">9 High Risk</string>
    <string name="risky_activity_list_1">
        <![CDATA[
            &#8226; Opening the mail<br/>
        ]]>
    </string>
    <string name="risky_activity_list_2">
        <![CDATA[
            &#8226; Getting restaurant takeout<br/>
            &#8226; Pumping gasoline<br/>
            &#8226; Playing tennis<br/>
            &#8226; Going camping<br/>
        ]]>
    </string>
    <string name="risky_activity_list_3">
        <![CDATA[
            &#8226; Grocery shopping<br/>
            &#8226; Going for a walk,run, or bike ride<br/>
            &#8226; Playing golf<br/>
        ]]>
    </string>
    <string name="risky_activity_list_4">
        <![CDATA[
            &#8226; Staying at a hotel for two nights<br/>
            &#8226; Sitting in a doctors waiting room<br/>
            &#8226; Going to a library or museum<br/>
            &#8226; Eating in a restaurant (outside)<br/>
            &#8226; Walking in a busy downtown<br/>
            &#8226; Spending an hour at a playground<br/>
        ]]>
    </string>
    <string name="risky_activity_list_5">
        <![CDATA[
            &#8226; Having a dinner at someone elses house<br/>
            &#8226; Attending a backyard babecue<br/>
            &#8226; Going to a beach or a mall<br/>
        ]]>
    </string>
    <string name="risky_activity_list_6">
        <![CDATA[
            &#8226; Sending kids to school,camp, or day care<br/>
            &#8226; Working a week in an office building<br/>
            &#8226; Swimming in a public pool<br/>
            &#8226; Visiting an elderly relative or friend in their home<br/>
        ]]>
    </string>
    <string name="risky_activity_list_7">
        <![CDATA[
            &#8226; Going to a hair salon or barbershop<br/>
            &#8226; Eating in a restaurant (inside)<br/>
            &#8226; Attending a wedding or funneral<br/>
            &#8226; Traveling by plane<br/>
            &#8226; Playing basketball<br/>
            &#8226; Hugging or shaking hands when greeting a friend<br/>
        ]]>
    </string>
    <string name="risky_activity_list_8">
        <![CDATA[
            &#8226; Eating at a buffet<br/>
            &#8226; Working out at a gym<br/>
            &#8226; Going to an amusement park or a movie theater<br/>
        ]]>
    </string>
    <string name="risky_activity_list_9">
        <![CDATA[
            &#8226; Attending a large music concert or a sports stadium<br/>
            &#8226; Attending a religious service with 500+ worshippers<br/>
            &#8226; Going to a bar<br/>
        ]]>
    </string>
    <string name="risky_activities_description">See what the risk of contagion each activity offers according to the Texas Medical Association.</string>
    <string name="risk_of_contagion">Risk of contagion</string>
    <string name="suspects">Suspects</string>
    <string name="refuses">Refuses</string>
    <string name="details">Details</string>
    <string name="state_flag">State\'s flag</string>
    <string name="useful_links_description">Learn how to make masks, wash your hands properly and more.</string>
</resources>