<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/casesFragment"
        android:icon="@drawable/ic_brazil"
        android:title="@string/cases" />
    <item
        android:id="@+id/symptomsFragment"
        android:icon="@drawable/ic_lung"
        android:title="@string/symptoms" />
    <item
        android:id="@+id/careFragment"
        android:icon="@drawable/ic_faucet"
        android:title="@string/care" />
    <item
        android:id="@+id/risksFragment"
        android:icon="@drawable/ic_risky_activities"
        android:title="@string/risky_activities" />
    <item
        android:id="@+id/usefulLinksFragment"
        android:icon="@drawable/ic_mask"
        android:title="@string/useful_links" />
</menu>