<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.CasesFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:contentDescription="@string/cases"
                    android:src="@drawable/home" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/covid_description"
                    android:textSize="12sp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">

                <TextView
                    android:id="@+id/text_brazil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_margin="4dp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/brazil"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/text_confirmed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_brazil"
                    android:layout_alignParentStart="true"
                    android:layout_margin="4dp"
                    android:text="@string/confirmed" />

                <TextView
                    android:id="@+id/text_number_confirmed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_brazil"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="4dp"
                    tools:text="0" />

                <TextView
                    android:id="@+id/text_active"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_confirmed"
                    android:layout_alignParentStart="true"
                    android:layout_margin="4dp"
                    android:text="@string/active" />

                <TextView
                    android:id="@+id/text_number_active"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_confirmed"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="4dp"
                    tools:text="0" />

                <TextView
                    android:id="@+id/text_recovered"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_active"
                    android:layout_alignParentStart="true"
                    android:layout_margin="4dp"
                    android:text="@string/recovered" />

                <TextView
                    android:id="@+id/text_recovered_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_active"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="4dp"
                    tools:text="0" />

                <TextView
                    android:id="@+id/text_deaths"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_recovered"
                    android:layout_alignParentStart="true"
                    android:layout_margin="4dp"
                    android:text="@string/deaths" />

                <TextView
                    android:id="@+id/text_number_deaths"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_recovered"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="4dp"
                    tools:text="0" />

                <TextView
                    android:id="@+id/text_updated_on"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_number_deaths"
                    android:layout_alignParentStart="true"
                    android:layout_margin="4dp"
                    android:text="@string/updatedAt" />

                <TextView
                    android:id="@+id/text_update_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_number_deaths"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="4dp"
                    tools:text="0" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/states"
                    android:textSize="24sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_brazilian_states"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_brazilian_state" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>